# l2cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.txt
common/: CMakeLists.txt  Misc.cpp
common/l2cpp/: Blowfish.cpp  Blowfish.hpp  CompileTimeConfig.hpp  Event.hpp  Exception.cpp  Exception.hpp  Misc.cpp  Misc.hpp  OptRef.hpp  Pimpl.hpp  Typedefs.hpp
common/l2cpp/details/: Pimpl.hpp
common/l2cpp/network/: Packet.cpp  Packet.hpp  PacketReader.hpp  Serialization.hpp  SocketListener.cpp  SocketListener.hpp
common/l2cpp/services/: Database.hpp
common/l2cpp/utils/: Enum.hpp  EnumMask.hpp  File.cpp  File.hpp  Traits.hpp
game_server/: Application.cpp  Application.hpp  CMakeLists.txt  CompileTimeConfig.hpp  Player.cpp  Player.hpp  Typedefs.hpp  main.cpp
game_server/game/: BodyPart.hpp  Character.cpp  Character.hpp  ChatType.hpp  GameObject.cpp  GameObject.hpp  Gauge.hpp  InventoryGearSlot.hpp  Item.cpp  Item.hpp  ItemCategory.hpp  ItemTemplate.hpp  Shortcut.cpp  Shortcut.hpp  World.cpp  World.hpp
game_server/game/actions/: Action.cpp  Action.hpp  Attack.cpp  Attack.hpp  AttackAction.cpp  AttackAction.hpp  Move.cpp  Move.hpp  MoveAction.cpp  MoveAction.hpp  SkillAction.cpp  SkillAction.hpp
game_server/game/actions/bypass/: BypassHandler.cpp  BypassHandler.hpp  IBypassHandler.hpp
game_server/game/actor/: Actor.cpp  Actor.hpp  Character.cpp  Character.hpp  Monster.cpp  Monster.hpp  NonPlayableActor.cpp  NonPlayableActor.hpp  Npc.cpp  Npc.hpp  NpcDirectory.cpp  NpcDirectory.hpp
game_server/game/combat/: Hit.cpp  Hit.hpp
game_server/game/components/: ActorAppearance.hpp  ActorAutoRegen.hpp  ActorIdentity.hpp  ActorRespawnTimer.hpp  ActorStatus.hpp  AttackStanceTimer.hpp  CharacterSelectionData.hpp  CharacterStatus.cpp  CharacterStatus.hpp  DeletionTimer.hpp  Gear.cpp  Gear.hpp  Loot.hpp  NpcAppearance.cpp  NpcAppearance.hpp  NpcStatus.cpp  NpcStatus.hpp  PlayerAppearance.cpp  PlayerAppearance.hpp  Position.cpp  Position.hpp  SkillDirectory.cpp  SkillDirectory.hpp  Stats.cpp  Stats.hpp
game_server/game/constants/: AbnormalEffectType.hpp  ActionType.hpp  ActorState.hpp  ActorType.hpp  CharacterCreationResult.hpp  ChatType.hpp  GearSlot.hpp  HitStatus.hpp  ItemCategory.hpp  ItemGrade.hpp  Profession.hpp  Race.hpp  Sex.hpp  ShortcutType.hpp  SkillTargetNature.hpp  SkillTargetType.hpp  SkillType.hpp  SocialAction.hpp  StatId.hpp  SystemMessageId.hpp  Team.hpp  Ui.hpp
game_server/game/ecs/: ActorSystem.hpp  Component.hpp  Entity.hpp  System.hpp
game_server/game/effects/: AbnormalEffect.cpp  AbnormalEffect.hpp  AbnormalEffectFactory.cpp  AbnormalEffectFactory.hpp  BuffEffect.cpp  BuffEffect.hpp  DamageEffect.cpp  DamageEffect.hpp  DamageElementType.hpp  HealEffect.cpp  HealEffect.hpp  ResurrectionEffect.cpp  ResurrectionEffect.hpp
game_server/game/effects/factories/: AbnormalEffectFactory.cpp  AbnormalEffectFactory.hpp  BuffEffectFactory.cpp  BuffEffectFactory.hpp  DamageEffectFactory.cpp  DamageEffectFactory.hpp  HealEffectFactory.cpp  HealEffectFactory.hpp  ResurrectionEffectFactory.cpp  ResurrectionEffectFactory.hpp  ToggleBuffEffectFactory.cpp  ToggleBuffEffectFactory.hpp
game_server/game/gameplay/: ExperienceTable.cpp  ExperienceTable.hpp
game_server/game/inventory/: Gear.cpp  Gear.hpp  GearSlot.hpp  GearTransaction.hpp  Item.cpp  Item.hpp  ItemCategory.hpp  ItemStorage.cpp  ItemStorage.hpp  ItemTemplate.hpp  ItemTemplateDirectory.cpp  ItemTemplateDirectory.hpp
game_server/game/lobby/: CharacterCreationParameters.hpp
game_server/game/skill/: Skill.cpp  Skill.hpp  SkillDirectory.cpp  SkillDirectory.hpp  SkillInfo.cpp  SkillInfo.hpp  SkillInfoRegister.cpp  SkillInfoRegister.hpp  SkillTemplate.cpp  SkillTemplate.hpp  SkillTemplateDirectory.cpp  SkillTemplateDirectory.hpp  SkillUid.cpp  SkillUid.hpp
game_server/game/systems/: ActorAbnormalEffectSystem.cpp  ActorAbnormalEffectSystem.hpp  ActorAttackStanceTimerSystem.cpp  ActorAttackStanceTimerSystem.hpp  ActorAutoRegenSystem.cpp  ActorAutoRegenSystem.hpp  ActorDeletionTimerSystem.cpp  ActorDeletionTimerSystem.hpp  ActorRespawnSystem.cpp  ActorRespawnSystem.hpp  ActorSkillEffectSystem.cpp  ActorSkillEffectSystem.hpp  ActorStatsUpdateSystem.cpp  ActorStatsUpdateSystem.hpp
game_server/game/ui/: ActionShortcut.cpp  ActionShortcut.hpp  ItemShortcut.cpp  ItemShortcut.hpp  Shortcut.cpp  Shortcut.hpp  ShortcutBar.cpp  ShortcutBar.hpp  SkillShortcut.cpp  SkillShortcut.hpp
game_server/handlers/: ActionRequest.cpp  Authenticate.cpp  CharacterCancelDeletion.cpp  CharacterCreate.cpp  CharacterList.cpp  CharacterSelect.cpp  CharacterShowCreationScreen.cpp  CharacterUpdateStatus.cpp  ChatAdminCommand.cpp  ChatSay.cpp  ClientRestart.cpp  ConnectionClosing.cpp  EnterWorld.cpp  InventoryOpen.cpp  ItemUnequip.cpp  ItemUse.cpp  LeaveWorld.cpp  ManorList.cpp  MiniMapShow.cpp  Move.cpp  MoveUpdate.cpp  PacketHandlers.cpp  PacketHandlers.hpp  Protocol.cpp  QuestList.cpp  RequestBypassToServer.cpp  ShortcutBarAdd.cpp  ShortcutBarRemove.cpp  SkillList.cpp  SkillUse.cpp  TargetClear.cpp  TargetSelect.cpp  UiConfirmationModalAnswer.cpp  UiShortcutSet.cpp  UiShortcutUnset.cpp  _Common.hpp
game_server/network/: Connection.cpp  Connection.hpp
game_server/network/packets/client/: OpCodes.hpp
game_server/network/packets/server/: CharacterStatusUpdatePacket.cpp  CharacterStatusUpdatePacket.hpp  ChatSayPacket.cpp  ChatSayPacket.hpp  ClientDisconnect.hpp  EntityStatusUpdatePacket.cpp  EntityStatusUpdatePacket.hpp  (+7 more)
game_server/orm/: Auth.cpp  Auth.hpp  Characters.cpp  Characters.hpp  Items.cpp  Items.hpp  Lobby.cpp  Lobby.hpp  Npcs.cpp  Npcs.hpp  Uids.cpp  Uids.hpp
game_server/services/: Database.cpp  Database.hpp
game_server/utils/: Chrono.hpp  Conversion.hpp  Maths.cpp  Maths.hpp  Target.cpp  Target.hpp
login_server/: Blowfish.cpp  Blowfish.hpp  CMakeLists.txt  Constants.hpp  Orm.cpp  Orm.hpp  Packet.cpp  Packet.hpp  Packets.hpp  main.cpp
login_server/crypto/: Blowfish.cpp  Blowfish.hpp  Checksum.cpp  Checksum.hpp  Rsa.cpp  Rsa.hpp
login_server/network/: Connection.cpp  Connection.hpp  OpCodes.hpp
(+95 files in other folders)
