project(login_server)

add_executable(${PROJECT_NAME})

find_package(OpenSSL REQUIRED COMPONENTS Crypto)
target_link_libraries(${PROJECT_NAME} PRIVATE ${CMAKE_PROJECT_NAME}-common OpenSSL::Crypto)

target_sources(${PROJECT_NAME}
    PRIVATE
        $<TARGET_OBJECTS:${CMAKE_PROJECT_NAME}-common>
    PRIVATE
        main.cpp
        Constants.hpp
        network/Connection.cpp
        network/Connection.hpp
        network/OpCodes.hpp
        crypto/Blowfish.cpp
        crypto/Blowfish.hpp
        crypto/Checksum.cpp
        crypto/Checksum.hpp
        crypto/Rsa.cpp
        crypto/Rsa.hpp
)
